MDEV-4856 SQL_ERROR_LOG shows 1146 errors which didnt appear in mysql client.     The fill_schema_table() function used to call get_table_share() for a table name in WHERE     then clear the error list. That way plugins receive the superfluous error notification if it     happens in it. Also the problem was that error handler didn't prevent the suppressed     error message from logging anyway as the logging happens in THD::raise_condition     before the handler call.     Trigger_error_handler is remade into Warnings_only_error_handler, so it stores the error     message in all cases in the thd->stmt_da.     Then later the stored error is raised.